# siegbert

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
misc/: zobrist.js
src/: main.cpp
src/evaluator/: Evaluator.cpp  Evaluator.hpp  MovesSorter.cpp  MovesSorter.hpp  Negamax.cpp  Negamax.hpp  Scorer.cpp  Scorer.hpp  TranspositionTable.cpp  TranspositionTable.hpp
src/game/: BoardState.cpp  BoardState.hpp  BoardState_constants.cpp  BoardState_constants.hpp  BoardState_get_move.cpp  BoardState_zobrist.cpp  OpeningBook.cpp  OpeningBook.hpp  build_BoardState_constants.py  square_for_bboard.cpp
src/interface/: EngineIO.cpp  EngineIO.hpp  EngineInterface.cpp  EngineInterface.hpp  UciInterface.cpp  UciInterface.hpp  XBoardInterface.cpp  XBoardInterface.hpp
src/logging/: Appender.cpp  Appender.hpp  FileAppender.cpp  FileAppender.hpp  Fs.cpp  Fs.hpp  LogLevel.cpp  LogLevel.hpp  LogMessage.cpp  LogMessage.hpp  Logger.cpp  Logger.hpp  Logging.cpp  Logging.hpp  StackTrace.cpp  StackTrace.hpp  StreamAppender.cpp  StreamAppender.hpp  Time.cpp  Time.hpp  UdpAppender.cpp  UdpAppender.hpp
src/movegen/: build_movegen_constants.py  movegen.c  movegen.h  movegen_constants.c  movegen_constants.h  movegen_zobrist_hash.c
src/pgn/: Pgn.cpp  Pgn.hpp
src/threading/: threading.cpp  threading.hpp
src/unittests/: main.cpp  test_BoardState.cpp  test_Evaluator.cpp  test_OpeningBook.cpp  test_Pgn.cpp  test_StackTrace.cpp  test_TranspositionTable.cpp  test_perft.cpp
src/utils/: StringUtils.cpp  StringUtils.hpp
